--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
- <html>
-   <head>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width">
-     <link rel="stylesheet" href="style.css"/>
-     <title>repl.it</title>   
-   </head>
-   <body>
-  
-     <script src="script.js"></script>
-   </body>
- </html> 
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
+    <title>Joke App</title>
+  </head>
+  <body>
+    <h1>Jokebook</h1>
+    <button id="funny-random">Get Funny Joke</button>
+    <button id="lame-random">Get Lame Joke</button>
+    <div id="joke-display" class="joke-container">
+      <!-- Jokes will appear here -->
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
+
